# BNY_Crew_FOMC_Simulator

./: .gitingore  README.md  requirements.txt
base/: Automated_metrics.py  README.md  fomc_simulation_1.md  fomc_simulation_2.md  fomc_simulation_3.md  fomc_simulation_4.md  helper_prepare_knowledge.py  rate_summary_1.json  rate_summary_2.json  rate_summary_3.json  rate_summary_4.json  results.txt  run_crew.sh
base_simulation/: README.md  pyproject.toml
base_simulation/memory/: fomc_longterm.db
bny_capstone_crew/: Automated_metrics.py  README.md  discussion.md  fomc_simulation.md  fomc_simulation_1.md  fomc_simulation_2.md  fomc_simulation_3.md  fomc_simulation_4.md  fomc_simulation_5.md  fomc_simulation_6.md  fomc_simulation_7.md  fomc_simulation_8.md  output3.txt  rate_summary.json  rate_summary_1.json  rate_summary_2.json  rate_summary_3.json  rate_summary_4.json  rate_summary_5.json  rate_summary_6.json  rate_summary_7.json  rate_summary_8.json  results.txt  run_crew.sh
bny_project/: discussion.md
chain_of_draft/: Automated_metrics.py  discussion.md  fomc_simulation_1.md  fomc_simulation_2.md  fomc_simulation_3.md  fomc_simulation_4.md  fomc_simulation_5.md  pyproject.toml  rate_summary_1.json  rate_summary_2.json  rate_summary_3.json  rate_summary_4.json  rate_summary_5.json  results.txt  run_crew.sh
chain_of_draft/knowledge/: user_preference.txt
chain_of_draft/src/bny_capstone_crew/: crew.py  main.py
demo/: .gitignore  setup.sh
deploy/: README.md  setup.sh
simulation_crew/: discussion.md
state_of_art_model/: etl.ipynb  fomc_meetings.csv  (+8 more)
(+58 files in other folders)
