[project]
name = "bny_capstone_crew"
version = "0.1.0"
description = "bny_capstone_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
bny_capstone_crew = "bny_capstone_crew.main:run"
run_crew = "bny_capstone_crew.main:run"
train = "bny_capstone_crew.main:train"
replay = "bny_capstone_crew.main:replay"
test = "bny_capstone_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
